tests/codegen/fail/input_object/struct/derive_field_non_deprecable.rs
use juniper::GraphQLInputObject;

#[derive(GraphQLInputObject)]
struct Object {
    #[graphql(deprecated)]
    test: String,
    #[deprecated]
    other: i32,
}

fn main() {}
